wallpaper changed and banner fixed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,15 +33,15 @@
         android:layout_height="50dp"
         android:ems="12"
         android:backgroundTint="#97FFFFFF"
-        android:hint="User Name"
+        android:hint="Email"
+        android:textColorHint="#6E6D6D"
         android:textColor="@color/black"
-        android:textColorHint="#C94E4C4C"
         android:fontFamily="sans-serif"
         android:textSize="16sp"
         android:textStyle="bold"
         android:letterSpacing="0.05"
         android:paddingLeft="30dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="30dp"
         android:shadowDy="5"
         android:shadowColor="@color/black"
         android:elevation="10dp"
@@ -55,8 +55,8 @@
         android:ems="12"
         android:backgroundTint="#97FFFFFF"
         android:textColor="@color/black"
-        android:textColorHint="#C94E4C4C"
-        android:hint="User Password"
+        android:hint="Password"
+        android:textColorHint="#6E6D6D"
         android:fontFamily="sans-serif"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -69,11 +69,31 @@
         android:background="@drawable/edit_text_shape"
         />
 
+        <EditText
+            android:id="@+id/et_C_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:hint="Confirm Password"
+            android:textColorHint="#6E6D6D"
+            android:ems="12"
+            android:layout_marginTop="25dp"
+            android:backgroundTint="#97FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:letterSpacing="0.05"
+            android:paddingLeft="30dp"
+            android:shadowDy="4"
+            android:shadowColor="@color/black"
+            android:elevation="10dp"
+            android:background="@drawable/edit_text_shape"
+
+            />
+
     <Button
         android:id="@+id/btnSubmit"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:text="Continue"
+        android:text="Sign Up"
         android:textSize="16sp"
         android:ems="12"
         android:textColor="@color/black"
