--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,9 +29,9 @@
                 android:id="@+id/etEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:hint="User"
+                android:hint="Email"
+                android:textColorHint="#6E6D6D"
                 android:ems="12"
-                android:textAlignment="center"
                 android:paddingLeft="30dp"
                 android:layout_marginTop="70dp"
                 android:backgroundTint="#97FFFFFF"
@@ -49,9 +49,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:hint="Password"
+                android:textColorHint="#6E6D6D"
                 android:ems="12"
-                android:textAlignment="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="25dp"
                 android:backgroundTint="#97FFFFFF"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -64,17 +64,49 @@
 
                 />
 
+
             <Button
                 android:id="@+id/btnLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
                 android:text="Login"
                 android:ems="12"
+                android:textStyle="bold"
                 android:paddingHorizontal="50dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:backgroundTint="#6AFAA69A"
-
+                android:shadowDy="4"
+                android:shadowColor="@color/black"
+                android:elevation="10dp"
                 />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="70dp"
+                android:layout_marginTop="10dp"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Don't have account?"
+                    android:textSize="15dp"
+                    />
+                <TextView
+                    android:id="@+id/tv_createAccount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Create Account"
+                    android:textSize="15dp"
+                    android:layout_alignParentRight="true"
+                    android:textColor="#3F51B5"
+                    android:textStyle="bold"
+                    />
+
+            </RelativeLayout>
+
+
         </LinearLayout>
 
 </LinearLayout>
